[gd_scene load_steps=3 format=3 uid="uid://cdp1ptkk1qkda"]

[ext_resource type="Script" path="res://GUI.gd" id="1_50b85"]
[ext_resource type="Theme" uid="uid://bgqmjm172gald" path="res://FontArtistic.tres" id="2_7aq0k"]

[node name="Sidebar" type="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 57.0
offset_bottom = 86.0
size_flags_stretch_ratio = 1.86
script = ExtResource("1_50b85")

[node name="Score_player1" type="RichTextLabel" parent="."]
layout_mode = 2
theme = ExtResource("2_7aq0k")
text = "0"
fit_content = true

[node name="Score_player2" type="RichTextLabel" parent="."]
layout_mode = 2
theme = ExtResource("2_7aq0k")
text = "0"
fit_content = true

[node name="TurnValue" type="RichTextLabel" parent="."]
layout_mode = 2
theme = ExtResource("2_7aq0k")
text = "Player 1 turn"
fit_content = true
autowrap_mode = 0
